# cmake_project_example

./: .gitignore  CMakeLists.txt  Dependency.cmake  READEME.md
src/: main.cpp
